[package]
name = "hana-server"
version = "0.1.7"
authors = ["Ian <ianguimaraes31@gmail>"]
edition = "2018"
license = "MIT"
description="Exchange files locally using mDNS"

[dependencies]
hana-types="0.1.0"
lazy_static = "1.4.0"
dns-message-parser="0.4.2"
bytes="1.0.1"
pnet = "0.27.2"
net2 = "0.2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
